# Ray2Box

./: .gitignore  readme.md  setup.cfg  setup.py
.github/workflows/: build.yml
Cli/: Ray2Box.py
Parsers/: configInfo.py  hy2.py  security.py  ss.py  transport.py  trojan.py  vless.py  vmess.py
singbox/: singboxGen.py
template/: __init__.py  template.py
