[metadata]
name = Ray2Box
version = 1.0.0
autor = ByteMysticRogue
author_email = bytemysticrogue@gmail.com
url = https://github.com/ByteMysticRogue
description = A Command-line Tool to Convert V2ray links to Singbox Configs
license = GPLv3
license_files = LICENSE
classifiers = 
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
include_package_data = True
packages = find:
install_requires =
    requests
python_requires = >=3.6

[options.packages.find]
exclude =
    Parsers*
    singbox*
    template*

[options.entry_points]
console_scripts =
    executable-name = Cli.Ray2Box:main